# gazon

./: .gitignore  PROGRESS.md
face_id/: camera_probe.py  enroll.py  recognize.py
ros2_ws/src/mower_description/: CMakeLists.txt  package.xml
ros2_ws/src/mower_description/launch/: gazebo_safety_demo.launch.py
ros2_ws/src/mower_description/urdf/: mower.urdf.xacro
ros2_ws/src/mower_description/worlds/: mower_world.world
ros2_ws/src/mower_safety/: package.xml  setup.cfg  setup.py
ros2_ws/src/mower_safety/launch/: safety_demo.launch.py
ros2_ws/src/mower_safety/mower_safety/: cmd_vel_gate.py  fake_lidar_publisher.py  safety_watchdog.py
voice_id/: enroll_voice.py  recognize_voice.py  requirements.txt
