<?xml version="1.0"?>
<?xml-stylesheet type="text/xsl" href="http://download.ros.org/schema/package_format3.xsd"?>
<package format="3">
  <name>mower_description</name>
  <version>0.0.1</version>
  <description>URDF model, Gazebo world and launch files for the mower simulation</description>
  <maintainer email="anton.cat.anton@gmail.com">anton</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>mower_safety</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
